--- a/src/app/product-tracklisting/product-tracklisting.component.html
+++ b/src/app/product-tracklisting/product-tracklisting.component.html
@@ -2,12 +2,12 @@
   <ul>
     <li *ngFor="let track of albumInfo?.album.tracks">
       <div class="col-sm-5">
-        <span class="track-number">{{albumInfo?.album.tracks.track-number}}</span>
-        <span class="track-name">{{albumInfo?.album.tracks.trackName}}</span>
+        <span class="track-number">{{track.trackNumber}}</span>
+        <span class="track-name">{{track.trackName}}</span>
       </div>
       <div class="col-sm-3 text-right">
-        <span class="track-time">{{albumInfo?.album.tracks.trackLength}}</span>
-        <span class="price-and-buy"><button>{{albumInfo?.album.tracks.trackPrice}}</button></span>
+        <span class="track-time">{{track.trackLength}}</span>
+        <span class="price-and-buy"><button>{{track.trackPrice}}</button></span>
       </div>
     </li>
   </ul>
